# iggie

./: .gitignore  panel_specs.md
driver/: 8ch.sch  channels.sch  fp-info-cache  iggie-driver-cache.lib  iggie-driver.kicad_pcb  iggie-driver.pro  iggie-driver.sch  shiftregs.sch  sym-lib-table
driver/pcb/: IPL1-116-01-L-D-RA-K.stp
driver0/pcb/: sym-lib-table
driver2/: driver-cache.lib  driver.kicad_pcb  driver.sch
load/: alpacasso.kicad_mod  alpacasso_face.kicad_mod  alpacasso_small.kicad_mod  fp-lib-table  heart.kicad_mod  load-cache.lib  load.kicad_pcb  load.pro  load.sch  sym-lib-table
load/gerbers/: load-B_Cu.gbl  load-B_Mask.gbs  load-B_SilkS.gbo  load-Edge_Cuts.gm1  load-F_Cu.gtl  load-F_Mask.gts  load-F_SilkS.gto  load-NPTH.drl  load-PTH.drl
minidriver/: minidriver.bom  minidriver.kicad_prl  minidriver.kicad_pro
minidriver/firmware/: Cargo.toml  Embed.toml  memory.x
minidriver/firmware/src/: main.rs
minidriver/firmware/src/hal/: gpio.rs  mod.rs  rcc.rs  tim.rs
minidriver/gerber/: minidriver-F_Cu.gbr  minidriver-F_Mask.gbr  minidriver-F_Paste.gbr  minidriver-F_Silkscreen.gbr  minidriver-job.gbrjob
minidriver/pcb/: minidriver.kicad_pcb  minidriver.kicad_prl  minidriver.kicad_pro  minidriver.kicad_sch  (+1 more)
pmod_hss/: fp-info-cache  hss.kicad_sch  pmod_hss.kicad_pcb  pmod_hss.kicad_prl  pmod_hss.kicad_pro  pmod_hss.kicad_sch
pmod_lss/: fp-lib-table  pmod_lss.kicad_pcb  pmod_lss.kicad_prl  pmod_lss.kicad_pro
psu/: Coilcraft-GA3459-BL.step  SM04B-PASS.step  boost_converter.bak  boost_converter.sch  flyback.sch  fp-info-cache  fp-lib-table  iggie_psu-cache.lib  iggie_psu.bak  iggie_psu.sch  psu-cache.lib  psu.bak  psu.bom  psu.kicad_pcb  psu.pro  psu.sch  psu.xml
psu/firmware/: Cargo.toml  memory.x
psu/firmware/src/: app.rs  kalman.rs  main.rs  pid.rs  state.rs  telem.rs
psu/firmware/src/hal/: adc.rs  comp.rs  dac.rs  dma.rs  gpio.rs  hrtim.rs  mod.rs  rcc.rs  tim2.rs  usart.rs
psu_boost/: boost_converter.bak  psu-cache.lib  psu.bom  psu.kicad_pcb  psu.xml
(+21 files in other folders)
