[package]
name = "minidriver_fw"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"

[patch.crates-io]
cortex-m = { git = "https://github.com/rust-embedded/cortex-m", branch = "v0.6.5" }

[dependencies]
cortex-m = "0.6.5"
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"
num_enum = { version = "0.5.1", default-features = false }
stm32ral = { version = "0.5.0", features = ["stm32g070", "rt"] }
rtt-target = { version = "0.3.0", features = ["cortex-m"] }

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
