[package]
name = "iggie-psu"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-rtfm = "0.5.0-beta.1"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

[dependencies.stm32ral]
path = "/home/adam/Projects/stm32ral"
features = ["stm32f3x4", "rt", "rtfm"]

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
