[package]
name = "iggie-psu"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-rtic = "0.5.3"
cortex-m-semihosting = "0.3.5"

[dependencies.stm32ral]
version = "0.4.1"
features = ["stm32f3x4", "rt", "rtfm"]

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true

[package.metadata]
chip = "STM32F334K8Tx"
